@@ -52,8 +52,8 @@ x improve documentation
     x hamserver.h - add doxygen section etc
     x extend the tutorial
 
-o call curl_global_cleanup() (take care - eventually not threadsafe?!)
-    o finally get rid of ALL the memory leaks for remote stuff
+x call curl_global_cleanup() (take care - eventually not threadsafe?!)
+    x finally get rid of ALL the memory leaks for remote stuff
 
 o fix freelist page overflow when searching for bits (See mail from Stefan)
     -> is this still relevant??
